assignment hierarachy, other enhancement